--- a/stones shop/about.html
+++ b/stones shop/about.html
@@ -66,19 +66,22 @@
                 <i class="fas fa-angle-double-right btn next"></i>
             </div>
             <div class="about_us">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nostrum ad ipsa expedita libero suscipit nobis laboriosam ex at omnis, assumenda optio sapiente provident quaerat impedit officiis, cum accusamus. Distinctio.
-                Illum commodi cupiditate et repellat, incidunt alias esse similique inventore fugit sequi vero mollitia sed dolorum iste tempora iusto asperiores error quae odio impedit quo nisi. Recusandae eius nihil nisi.
-                Nihil tempore illo in exercitationem accusamus, accusantium error ab iusto unde sed velit omnis cupiditate harum sunt consequuntur magnam quae, aut animi inventore, cumque ipsum reiciendis labore. Ipsam, commodi sapiente.
-                Ad eaque, assumenda repudiandae itaque reiciendis cumque debitis expedita earum, libero quis doloremque aliquam, illum amet rerum! Placeat distinctio ipsam impedit reiciendis amet corrupti, blanditiis nostrum adipisci quo sit tempore!
-                Nisi id mollitia quidem adipisci at error eveniet ipsam a magni quasi. Sequi eligendi doloremque earum explicabo. Perferendis consequatur error voluptatum sint! Animi molestiae minus, corrupti natus nihil distinctio exercitationem!
-                Iste laboriosam, eius optio repellat incidunt enim maiores eos rerum expedita? Repudiandae ratione repellat placeat tenetur consequatur voluptatem enim, soluta, eveniet atque voluptas mollitia. Iusto, adipisci velit. Laboriosam, adipisci ex.
-                Modi qui animi reprehenderit sequi, ipsam ipsum odio odit earum molestias eaque. Aliquam cum molestias nostrum a, omnis sequi tempore rerum laborum vel quibusdam, minima explicabo, voluptatum quasi deleniti? Natus.
-                At facere quod possimus magnam aliquam libero sed veritatis debitis temporibus aliquid adipisci recusandae quidem deleniti soluta corporis, repellendus officiis asperiores iure delectus modi perspiciatis voluptates, rerum fugiat incidunt? Dolorum!
-                Magnam, veritatis eligendi sequi eaque quasi ratione amet nostrum recusandae molestiae dolores tenetur reiciendis ea, a incidunt alias earum, esse necessitatibus obcaecati nam perferendis deserunt mollitia! Ad inventore enim modi.
-                Consequuntur facere voluptates sint iste deserunt vero ratione saepe ea doloremque. Eius nostrum itaque culpa, nesciunt tempore quod eligendi, fugit nisi adipisci excepturi ex at architecto ullam asperiores ab quia?
+                About Us :
+                Established in 1998 , RATNASMRITI GEMS & JEWELLERS is a Bandel, Hooghly Based Business specializing in
+                certified Gemstone , Natural Rudraksha , Government & International Laboratory Tasted Diamond . Renowned
+                for its expertise Ratnasmriti Gems and Jewellers Boats a remarkable 5 star Ratings on Google .
+                Solidifying it's position as a Top rated Gemstone Showroom in the City .
+                Best Gemstone Shop in Bandel , Hooghly with a wild Range of Natural Gemstone including - Ruby(chuni),
+                Emerald (panna) , yellow sapphire ( pokhraj ) , Blue Sapphire ( Neelam )
+                Hessonite Garnet (gomed) , Red Coral (Lal Pola/moonga) ,pearl (moti/ mukto) , Diamond, Moonstone,
+                Catseye, Zircon, Rudraksha as a much reasonable Compair to any other Gemstone Dealer in Bandel, Hooghly
+                .
+
+                We aslo have in-house astrology Consultation with Renowned Astrologer S.Sarkar .
 
                 <div class="social_links">
-                    <a href="tel:+916291176902" title="Click Here to Call Us"><i class="fa-solid fa-square-phone"></i></a>
+                    <a href="tel:+916291176902" title="Click Here to Call Us"><i
+                            class="fa-solid fa-square-phone"></i></a>
                     <a href="https://www.facebook.com/rsjchannel/" target="_blank" title="Visit Our Facebook Page "><i
                             class="fa-brands fa-facebook"></i></a>
                     <a href="https://youtu.be/Jgcmim_NTIM" target="_blank" title="Visite Our YouTube Channel"><i
