--- a/stones shop/home.html
+++ b/stones shop/home.html
@@ -22,7 +22,7 @@
                 <ul id="sidemenu">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="catagory.html">Catagory &dtrif;</a>
+                    <li><a href="#">Catagory &dtrif;</a>
                         <ul class="dropdown">
                             <li><a href="#">Catagory 1</a></li>
                             <li><a href="#">Catagory 2</a></li>
@@ -34,7 +34,8 @@
 
                 </ul>
             </div>
-            <i class="fas fa-bars" id="menuIcon"></i>
+            <i class="fas fa-bars" id="menuIcon" onclick="openmenu()"></i>
+
         </div>
 
         <div class="logo_title">
@@ -57,14 +58,15 @@
             <!-- this is image slider  -->
             <div class="slider-container">
                 <div class="image-container">
-                    <img class="slimg" src="images/store1.jpeg" alt="image">
-                    <img class="slimg" src="images/store1.jpeg" alt="image">
-                    <img class="slimg" src="images/store1.jpeg" alt="image">
-                    <img class="slimg" src="images/store1.jpeg" alt="image">
-                    <img class="slimg" src="images/store1.jpeg" alt="image">
+                    <img class="slimg" src="images/store2.jpeg" alt="image">
+                    <img class="slimg" src="images/store2.jpeg" alt="image">
+                    <img class="slimg" src="images/store2.jpeg" alt="image">
+                    <img class="slimg" src="images/store2.jpeg" alt="image">
+                    <img class="slimg" src="images/store2.jpeg" alt="image">
                 </div>
                 <i class="fas fa-angle-double-left btn prev"></i>
                 <i class="fas fa-angle-double-right btn next"></i>
+                <div class="dots-container"></div>
             </div>
             <!-- this is populer products -->
             <div class="popular_products">
