--- a/stones shop/about.html
+++ b/stones shop/about.html
@@ -20,17 +20,10 @@
             </div>
             <div class="menu">
                 <ul id="sidemenu">
-                    <li><a href="{% url " landing_home" %}">Home</a></li>
-                    <li><a href="{% url " landing_about" %}">About</a></li>
-                    <li><a href="#">Catagory &dtrif;</a>
-                        <ul class="dropdown">
-                            <li><a href="#">Catagory 1</a></li>
-                            <li><a href="#">Catagory 2</a></li>
-                            <li><a href="#">Catagory 3</a></li>
-                            <li><a href="#">Catagory 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="{% url " landing_notice" %}">Contact US</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Store Location</a></li>
+                    <li><a href="#">Contact US</a></li>
 
                 </ul>
             </div>
@@ -66,18 +59,96 @@
                 <i class="fas fa-angle-double-right btn next"></i>
             </div>
             <div class="about_us">
-                About Us :
-                Established in 1998 , RATNASMRITI GEMS & JEWELLERS is a Bandel, Hooghly Based Business specializing in
-                certified Gemstone , Natural Rudraksha , Government & International Laboratory Tasted Diamond . Renowned
-                for its expertise Ratnasmriti Gems and Jewellers Boats a remarkable 5 star Ratings on Google .
-                Solidifying it's position as a Top rated Gemstone Showroom in the City .
-                Best Gemstone Shop in Bandel , Hooghly with a wild Range of Natural Gemstone including - Ruby(chuni),
-                Emerald (panna) , yellow sapphire ( pokhraj ) , Blue Sapphire ( Neelam )
-                Hessonite Garnet (gomed) , Red Coral (Lal Pola/moonga) ,pearl (moti/ mukto) , Diamond, Moonstone,
-                Catseye, Zircon, Rudraksha as a much reasonable Compair to any other Gemstone Dealer in Bandel, Hooghly
-                .
+            
+                <h1>About Us </h1>
+<br>
+                Welcome to RATNASMRITI GEMS & JEWELLERS
+<br>
+<br>
+                Established in 1998, RATNASMRITI GEMS & JEWELLERS has proudly served the gemstone and jewelry community
+                for over two decades. Our showroom, located in the heart of Bandel, Hooghly, is a beacon of trust and
+                quality in the industry, dedicated to offering the finest gemstones, natural Rudraksha beads, and
+                certified diamonds. Our legacy is built on a foundation of expertise, authenticity, and a deep
+                commitment to customer satisfaction.
+<br>
+                 Our Collections
+<br>
+                Gemstones: We specialize in a wide range of meticulously selected gemstones, each certified for
+                authenticity and quality. Our extensive collection includes:
 
-                We aslo have in-house astrology Consultation with Renowned Astrologer S.Sarkar .
+                - Ruby (Chuni)  <br>
+                - Emerald (Panna) <br>
+                - Yellow Sapphire (Pokhraj) <br>
+                - Blue Sapphire (Neelam) <br>
+                - Hessonite Garnet (Gomed) <br>
+                - Red Coral (Lal Pola/Moonga) <br>
+                - Pearl (Moti/Mukto) <br>
+                - Diamond <br>
+                - Moonstone <br>
+                - Cat's Eye <br>
+                - Zircon <br>
+                - Natural Rudraksha Beads <br>
+<br>
+                Whether you are seeking a gemstone for astrological purposes, jewelry making, or personal collection,
+                RATNASMRITI GEMS & JEWELLERS has something to meet every need and preference.
+<br>
+                 Quality Assurance
+<br>
+                At RATNASMRITI GEMS & JEWELLERS, quality is our hallmark. We prioritize customer satisfaction and ensure
+                that every gemstone in our collection undergoes rigorous testing processes. Our gemstones are certified
+                by both government and international laboratories to guarantee authenticity and value. This commitment
+                to excellence has earned us a remarkable 5-star rating on Google, reflecting the trust and satisfaction
+                of our valued customers.
+<br>
+                 Personalized Services
+<br>
+                In addition to our extensive selection of gemstones, we offer personalized astrology consultations with
+                renowned Astrologer S. Sarkar. Our in-house astrology services provide customers with valuable insights
+                and guidance, helping them make informed decisions about their gemstone purchases and astrological
+                queries. Whether you need advice on selecting the right gemstone for your astrological chart or guidance
+                on any other astrological matter, our expert is here to assist you.
+<br>
+                 Our Commitment
+<br>
+                Competitive Pricing: As the leading gemstone showroom in Bandel, Hooghly, we are committed to
+                offering competitive prices without compromising on quality. Our aim is to make high-quality gemstones
+                accessible to all, ensuring that our customers receive the best value for their investment.
+<br>
+                Customer Satisfaction: At RATNASMRITI GEMS & JEWELLERS, customer satisfaction is our top priority.
+                We believe in building long-term relationships based on trust, transparency, and exceptional service.
+                Our knowledgeable and friendly staff are always ready to assist you, ensuring a pleasant and fulfilling
+                shopping experience.
+<br>
+                Discover the Difference:
+<br>
+                Whether you are a seasoned gemstone enthusiast, a jewelry designer, or someone exploring the world of
+                gemstones for the first time, we invite you to visit RATNASMRITI GEMS & JEWELLERS. Discover the beauty
+                and power of natural gemstones in our showroom and experience the difference of shopping with a trusted
+                name in the industry. At RATNASMRITI GEMS & JEWELLERS, we promise quality, authenticity, and an
+                unwavering commitment to your satisfaction.
+<br>
+                Contact Us:
+<br>
+                Visit our showroom or get in touch with us to learn more about our products and services. We look
+                forward to welcoming you to RATNASMRITI GEMS & JEWELLERS and helping you find the perfect gemstone to
+                meet your needs.
+<br>
+                ---
+<br>
+                 Visit Us:
+<br>
+                Address: Sarat Sarani Rd, near Canara Bank, More, Chinsurah, West Bengal 712103
+<br>
+                Phone: [Insert Phone Number Here]
+<br>
+                Email: [Insert Email Address Here]
+<br>
+                ---
+<br>
+                Thank you for choosing RATNASMRITI GEMS & JEWELLERS. We look forward to serving you and helping you
+                discover the perfect gemstone to enhance your life and fulfill your needs.
+
+
 
                 <div class="social_links">
                     <a href="tel:+916291176902" title="Click Here to Call Us"><i
