--- a/stones shop/catagory.html
+++ b/stones shop/catagory.html
@@ -21,12 +21,13 @@
         <h2 style="font-family: Plus Jakarta Sans;">Ratnasmriti Gems & Jewellers</h2>
     </div>
     <div class="menu">
-        <ul id="sidemenu">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="{% url " landing_notice" %}">Contact US</a></li>
+      <ul id="sidemenu">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#">Store Location</a></li>
+        <li><a href="#">Contact US</a></li>
 
-        </ul>
+    </ul>
     </div>
     <i class="fas fa-bars" id="menuIcon" onclick="openmenu()"></i>
 
